--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "googleapis": "^148.0.0",
+    "node-cron": "^3.0.3",
     "tailwindcss": "^4.0.15"
   }
 }
