--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "proyecto-sp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api.js",
-    "api": "nodemon api.js",
-    "server": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
