--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=8080
 
+CACHE_KEY=32004SP
+
 GRADE_1=1tXJ_ro0Cbn_HWioRYqAEypnID57OemTq
 GRADE_2=1cJIMCEu8igF01mNk64sBdbwiPqAv4P1B
 GRADE_3=1--pBh9WbrWZUPzGSoHpeQ1bzMi1RRRpw
