--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GRADE_3=1--pBh9WbrWZUPzGSoHpeQ1bzMi1RRRpw
 GRADE_4=1XwXV3HO0onXZ6ZgHpgrMrnZyh-fH6zlC
 GRADE_5=1HXGS6EbKrS5318WriibTG7n62laaoGam
 GRADE_6=1gxM2lz7T2TovXEMaLtPqT4sHumorGCgV
+
+TEACHERS=1SA3X7fxOKJxDYr_Xi5ShIgbZP5Rj5NHbyY_WxH5bxNA
